--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,14 +66,14 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.afollestad.material-dialogs:core:0.9.4.2'
-    compile 'com.github.pluscubed:recycler-fast-scroll:0.3.2@aar'
+    compile 'com.futuremind.recyclerfastscroll:fastscroll:0.2.5'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.anjlab.android.iab.v3:library:1.0.38'
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
-    compile 'com.google.android.apps.muzei:muzei-api:2.0'
     compile 'com.github.rafakob:DrawMe:0.1.6'
     compile 'org.sufficientlysecure:html-textview:3.2'
     compile 'com.github.danimahardhika:cafebar:1.0.7'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.6'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:palette-v7:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
