--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.jakewharton.butterknife'
+apply plugin: 'com.google.gms.google-services'
 
 buildscript {
     repositories {
@@ -48,10 +49,6 @@ android {
         release {
             signingConfig signingConfigs.config
         }
-        debug {
-            applicationIdSuffix '.debug'
-            versionNameSuffix ' DEBUG'
-        }
     }
 }
 
@@ -60,9 +57,7 @@ dependencies {
     compile 'com.github.danimahardhika.candybar-library:PreLollipopTransitions:3.0.2'
     compile 'com.github.danimahardhika.candybar-library:GoogleLicensing:3.0.2'
     compile 'com.bluelinelabs:logansquare:1.3.7'
-    apt 'com.bluelinelabs:logansquare-compiler:1.3.7'
     compile 'com.jakewharton:butterknife:8.5.1'
-    apt 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.afollestad.material-dialogs:core:0.9.4.2'
     compile 'com.anjlab.android.iab.v3:library:1.0.38'
@@ -76,4 +71,9 @@ dependencies {
     compile 'com.android.support:palette-v7:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.google.firebase:firebase-core:10.2.4'
+    compile 'com.google.firebase:firebase-messaging:10.2.4'
+    compile 'com.google.firebase:firebase-analytics:10.2.1'
+    apt 'com.bluelinelabs:logansquare-compiler:1.3.7'
+    apt 'com.jakewharton:butterknife-compiler:8.5.1'
 }
